AG-7799 - FW buttons, Fix label text color contrast issue

--- a/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/layouts/index.module.scss
@@ -102,7 +102,7 @@ main {
 
     &__framework-label {
         margin-right: 8px;
-        color: $secondary;
+        color: darken($secondary, 10%);
     }
 }
 
